fix header overflow

--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -36,6 +36,7 @@ li > a {
 
 .bg-ledgy {
   background-image: linear-gradient(to right bottom, #053a5e, #005e85, #0086a9, #00afc9);;
+  overflow: hidden;
 }
 .nav-link {
   font-size: 0.8em !important;
